// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clip.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>
    123
    456
    789



=====================================output=====================================
>
  123
  456
  789

================================================================================
`;

exports[`clip.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>
    123
    456
    789



=====================================output=====================================
>
  123 456 789

================================================================================
`;

exports[`indent.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>2-
    123
   456
  789



=====================================output=====================================
>2-
    123
   456
  789

================================================================================
`;

exports[`indent.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>2-
    123
   456
  789



=====================================output=====================================
>2-
    123
   456
  789

================================================================================
`;

exports[`keep.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>+
    123
    456
    789



=====================================output=====================================
>+
  123
  456
  789



================================================================================
`;

exports[`keep.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>+
    123
    456
    789



=====================================output=====================================
>+
  123 456 789



================================================================================
`;

exports[`map.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0

=====================================output=====================================
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0

================================================================================
`;

exports[`map.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0

=====================================output=====================================
a: >
  123 456 789
b: >1
    123
   456
  789
d: >
  123 456 789

c: 0

================================================================================
`;

exports[`middle-comment.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!str #comment
>
  123

=====================================output=====================================
!!str #comment
>
  123

================================================================================
`;

exports[`middle-comment.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
!!str #comment
>
  123

=====================================output=====================================
!!str #comment
>
  123

================================================================================
`;

exports[`middle-comments.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!str # comment 1
# comment 2
>
  123

=====================================output=====================================
!!str
# comment 1
# comment 2
>
  123

================================================================================
`;

exports[`middle-comments.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
!!str # comment 1
# comment 2
>
  123

=====================================output=====================================
!!str
# comment 1
# comment 2
>
  123

================================================================================
`;

exports[`newline.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0

=====================================output=====================================
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0

================================================================================
`;

exports[`newline.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0

=====================================output=====================================
- >+
  123 456 789

  123 456 789


  123 456 789


- >2+
  123 456 789

  123 456 789


  123 456 789

- 0

================================================================================
`;

exports[`newline-unaligned.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6

=====================================output=====================================
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6

================================================================================
`;

exports[`newline-unaligned.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6

=====================================output=====================================
>
  1 2
    3
    4
  5 6

  1 2
    3
    4
  5 6


  1 2
    3
    4
  5 6

  1 2

    3
    4

  5 6

================================================================================
`;

exports[`props.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!str &anchor >
  123

=====================================output=====================================
!!str &anchor >
  123

================================================================================
`;

exports[`props.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
!!str &anchor >
  123

=====================================output=====================================
!!str &anchor >
  123

================================================================================
`;

exports[`props-in-map.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!str &anchor >
  123

=====================================output=====================================
a: !!str &anchor >
  123

================================================================================
`;

exports[`props-in-map.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
a: !!str &anchor >
  123

=====================================output=====================================
a: !!str &anchor >
  123

================================================================================
`;

exports[`prose.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
> 
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789

=====================================output=====================================
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
>
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789

================================================================================
`;

exports[`prose.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
> 
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789

=====================================output=====================================
>
  123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123
  456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456
  789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789
---
>
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789

================================================================================
`;

exports[`seq.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- >
  123
  456
  789
- >1
    123
   456
  789
- 0

=====================================output=====================================
- >
  123
  456
  789
- >1
    123
   456
  789
- 0

================================================================================
`;

exports[`seq.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- >
  123
  456
  789
- >1
    123
   456
  789
- 0

=====================================output=====================================
- >
  123 456 789
- >1
    123
   456
  789
- 0

================================================================================
`;

exports[`strip.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
>-
    123
    456
    789



=====================================output=====================================
>-
  123
  456
  789

================================================================================
`;

exports[`strip.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
>-
    123
    456
    789



=====================================output=====================================
>-
  123 456 789

================================================================================
`;

exports[`trailing-comment.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!str > # hello
  hello

=====================================output=====================================
a: !!str > # hello
  hello

================================================================================
`;

exports[`trailing-comment.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
a: !!str > # hello
  hello

=====================================output=====================================
a: !!str > # hello
  hello

================================================================================
`;
